hard-gists/484009/run.log
=== Docker Run Log for 484009 ===
Started at: Mi 29. Okt 15:02:20 CET 2025

[2025-10-29 15:02:20] START: Running container for 484009
[2025-10-29 15:02:21] SUCCESS: Container 65b144a03195f98e00f2612e00b683e9165995ec2366a24cdecbf753d43f2abc started for 484009
=== Container logs for 484009 ===
  File "/snippet.py", line 63
    print "Got:", item
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 484009 ===
[2025-10-29 15:02:23] INFO: Container 65b144a03195f98e00f2612e00b683e9165995ec2366a24cdecbf753d43f2abc has stopped
